welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:2: error: Missing closing brace `}' assumed here
def isFacingTrail():Boolean = {
^SlugTracking:28: error: Missing closing brace `}' assumed here
     if(getCouleurSol(Color.green)==true){
     ^